--- a/database/.env
+++ b/database/.env
@@ -1,7 +1,20 @@
-# Base de données configuration
-DB_CONNECTION=mysql
-DB_HOST=ac6p1m.myd.infomaniak.com
-DB_PORT=3306
-DB_DATABASE=ac6p1m_hubnota
-DB_USERNAME=ac6p1m_hubnota
-DB_PASSWORD=G7Zf-MsbnP2
+# Mon Hub Personnel
+
+Bienvenue dans **Mon Hub Personnel** ! 🎉
+
+## Qu'est-ce que c'est ?
+
+Mon Hub Personnel est un projet que j'ai créé pour centraliser et organiser tous mes projets personnels en un seul endroit. Ce hub me permet de regrouper et de présenter divers projets que j'ai réalisés, tout en facilitant l'accès et la navigation entre eux.
+
+## Objectifs
+
+- **Centralisation** : Regrouper tous mes projets personnels en un seul endroit.
+- **Accessibilité** : Offrir une interface facile à utiliser pour explorer et consulter les projets.
+- **Organisation** : Structurer les projets de manière claire et cohérente.
+
+## Fonctionnalités
+
+- **Tableau de bord** : Une vue d'ensemble de tous les projets disponibles.
+- **Catégorisation** : Organisation des projets en différentes catégories pour une navigation simplifiée.
+- **Détails des projets** : Des pages individuelles pour chaque projet avec des descriptions, des images et des liens pertinents.
+
